--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = atmelavr
 board = diecimilaatmega168
 framework = arduino
 upload_port = COM6
+lib_deps = 
+	adafruit/DHT sensor library@^1.4.3
+	adafruit/Adafruit Unified Sensor@^1.1.5
