--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,5 @@ upload_port = COM6
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.3
 	adafruit/Adafruit Unified Sensor@^1.1.5
+	fmalpartida/LiquidCrystal@^1.5.0
+    Wire
